# flappierBird

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
.github/workflows/: ci.yml
docs/: RESEARCH_DEVELOPMENT_REPORT.md
verification/tla/: FlappierBird.tla
verification/z3/: FlappierBird.smt2
